--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     ],
     "require": {
         "gregavola/untappdphp": "^1",
-        "paquettg/php-html-parser": "^3.1"
+        "paquettg/php-html-parser": "^3.1.1",
+        "ext-mbstring": "*"
     }
 }
